# the-battles

./: CMakeLists.txt  README.md  build.sh  index.html  toolchain-mingw64.cmake
.github/workflows/: pages.yml
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: BattlePass.h  Bot.h  Constants.h  Entity.h  Game.h  Map.h  Player.h  Storm.h  Weapon.h
installer/: installer.nsi
src/: BattlePass.cpp  Bot.cpp  Game.cpp  Map.cpp  Player.cpp  Storm.cpp
website/: index.html
